# slack-event-manager

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONFIG_REFACTORING.md  DATABASE_CONFIG_ANALYSIS.md  DIGEST_FEATURE_SUMMARY.md  DOCKER_DEPLOYMENT.md  DOCKER_IMPLEMENTATION_SUMMARY.md  Dockerfile  LICENSE  MIGRATION_TO_POSTGRES.md  Makefile  POSTGRES_IMPLEMENTATION_SUMMARY.md  README.md  TELEGRAM_IMPLEMENTATION_SUMMARY.md  alembic.ini  app.py  config.example.yaml  config.yaml  dev.plan.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  test_session.session
.github/workflows/: ci.yml  pre-commit.yml
alembic/: README  env.py
alembic/versions/: 001_initial_schema.py  20251020145129_add_telegram_message_id_column.py  202510231805_add_candidate_lease_columns.py  202510251200_add_llm_cache_and_source_id.py  20251031114710_rename_telegram_ts_column.py  202511060930_slack_ingestion_state_pipeline_tasks.py  4bfe4eac39b1_add_telegram_ingestion_state_table.py  b4e8c6d0f1d7_add_processing_candidate_status.py  d00fe85d0b43_add_raw_telegram_messages_table.py  fe9b455692bd_migrate_events_to_new_architecture.py
config/: object_registry.yaml
config/defaults/: channels.example.yaml  main.example.yaml  object_registry.example.yaml  telegram_channels.example.yaml
config/prompts/: slack.txt  slack.yaml  telegram.txt  telegram.yaml
config/schemas/: channels.schema.json  main.schema.json  object_registry.schema.json
docs/: CONFIG.md  MULTI_SOURCE_IMPLEMENTATION_SUMMARY.md  MULTI_SOURCE_NEXT_STEPS.md  MULTI_SOURCE_PROGRESS.md  OPERATIONS_OBSERVABILITY.md  PHASE2_REPOSITORY_SUMMARY.md  PHASE4_AND_5_COMPLETE.md  PHASE4_COMPLETE.md  PHASE4_CONFIGURATION_SUMMARY.md  PHASE5_COMPLETE.md  PHASE5_SUMMARY.md  STRUCTURED_LOGGING_IMPLEMENTATION.md  TELEGRAM_INTEGRATION.md  audit_test_plan.md  pipeline_workers.md
migrations/: 001_add_slack_state_pg.sql  001_add_slack_state_sqlite.sql  001_add_slack_state_sqlite_rollback.sql  002_add_slack_caches_pg.sql  002_add_slack_caches_sqlite.sql  003_add_pipeline_queue_pg.sql  003_add_pipeline_queue_pg_rollback.sql  README.md
scripts/: __init__.py  backfill.py  demo_e2e.py  dev_workflow_demo.py  diagnose_components.py  docker-entrypoint.sh  fix_postgres_schema.py  generate_digest.py  migrate_database.py  migrate_multi_source.py  migrate_to_config_dir.sh  migrate_to_new_schema.py  pipeline_runtime.py  quick_test.py  run_dedup_worker.py  run_extraction_worker.py  run_ingest_worker.py  run_llm_worker.py  run_multi_source_pipeline.py  run_pipeline.py  run_pipeline_scheduler.py  run_releases_pipeline.py  run_releases_pipeline_real.py  setup_config.sh  telegram_auth.py  telegram_qr_auth.py  test_enhanced_fields.py  test_extraction.py  test_multi_source_fix.py  test_pipeline_minimal.py  test_postgres_pipeline.py  test_real_apis.py  test_retry_mechanism.py  test_telegram_ingestion.py  test_with_real_data.py  verify_fixes.py  verify_no_prints.py
src/: __init__.py  classification.py  clickhouse_loader.py  llm_parser.py  slack_extractor.py
src/adapters/: bulk_persistence.py  job_runner_inprocess.py  llm_client.py  message_client_factory.py  postgres_repository.py  postgres_task_queue.py  query_builders.py  repository_factory.py  slack_client.py  slack_permalink_cache.py  slack_state_store.py  slack_users_cache.py  sqlite_repository.py  telegram_client.py
src/clients/: __init__.py  slack_wrapped.py
src/config/: channels.py  logging_config.py  settings.py
src/domain/: candidate_constants.py  deduplication_constants.py  exceptions.py  models.py  protocols.py  scoring_constants.py  specifications.py  task_queue.py  validation_constants.py
src/observability/: metrics.py  tracing.py
src/ports/: job_runner.py  task_queue.py
src/presentation/: streamlit_orchestration.py
src/services/: date_resolver.py  (+10 more)
tests/: conftest.py  test_app_channel_attribution.py  test_build_candidates_multi_source.py  test_bulk_persistence_counts.py  test_channel_config.py  test_cleanup_migrations.py  test_config_integration.py  test_config_loading.py  test_correlation_metrics_smoke.py  test_dashboard_use_case.py  test_date_resolver.py  test_deduplicate_events_use_case.py  test_deduplicator.py  test_digest_e2e.py  test_domain_models_multi_source.py  test_event_validator_integration.py  test_extract_events_caching.py  test_extractor_di.py  test_ingest_messages_lookback.py  test_ingestion_state.py  test_job_runner_inprocess.py  test_link_extractor.py  test_llm_integration.py  test_llm_logging.py  test_llm_prompt_loading.py  test_message_client_factory.py  test_new_deduplication.py  test_object_registry_fallback.py  test_postgres_repository.py  test_postgres_task_queue.py  test_prompt_hashing.py  test_protocols_multi_source.py  test_publish_digest.py  test_repository_multi_source.py  test_scoring_engine.py  test_settings_multi_source.py  test_slack_429_backoff.py  test_slack_client.py  test_slack_ingest_watermark_resume.py  test_slack_ordering_numeric.py  (+15 more)
(+16 files in other folders)
